# proxynexus-rs

./: .gitignore  Cargo.toml  PACKAGING.md  README.md  UPDATING_COLLECTION.md  UPSTREAM_SYNC.md
proxynexus-cli/: Cargo.toml
proxynexus-cli/src/: main.rs
proxynexus-core/: Cargo.toml  build.rs
proxynexus-core/src/: card_source.rs  card_store.rs  catalog.rs  collection_builder.rs  collection_manager.rs  db_storage.rs  error.rs  image_provider.rs  lib.rs  models.rs  mpc.rs  pdf.rs  print_prep.rs  query.rs  upscaler.rs
proxynexus-core/src/games/: ADDING_GAMES.md  mod.rs
proxynexus-core/src/games/agot/: adapter.rs  api.rs  models.rs
proxynexus-core/src/games/l5r/: adapter.rs  api.rs  mod.rs  models.rs
proxynexus-core/src/games/lotrlcg/: adapter.rs  api.rs  mod.rs  models.rs
proxynexus-core/src/games/marvel_champions/: adapter.rs  api.rs  mod.rs  models.rs
proxynexus-core/src/games/netrunner/: adapter.rs  api.rs  models.rs
proxynexus-gui/: Cargo.toml  build.rs  tailwind.css
proxynexus-gui/assets/: tailwind.css
proxynexus-gui/public/: init.sql
proxynexus-gui/public/worker/: upscaler_worker.js
proxynexus-gui/src/: analytics.rs  export.rs  main.rs
proxynexus-gui/src/components/: about_modal.rs  card_list_input.rs  export_controls.rs  mod.rs  preview_grid.rs  source_selector.rs  upscale_info.rs  variant_selector.rs
