[package]
name = "proxynexus-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
dirs = "6.0.0"
proxynexus-core = { version = "0.1.0", path = "../proxynexus-core" }
tokio = { version = "1.51.0", features = ["full"] }
tracing-subscriber = "0.3.23"
web-time = "1.1"
tracing = "0.1.44"
image = "0.25.10"
anyhow = "1.0.102"

[features]
upscaling = ["proxynexus-core/upscaling"]
