[package]
name = "proxynexus-core"
version = "0.1.0"
edition = "2024"

[dependencies]
krilla = "0.7.0"
serde = { version = "1.0.228", features = ["derive"] }
zip = "8.5.0"
toml = "1.1.2"
image = { version = "0.25.10", default-features = false, features = ["jpeg", "png"] }
serde_json = "1.0.149"
gluesql = { version = "0.19.0", default-features = false }
gluesql_memory_storage = "0.19.0"
web-time = "1.1.0"
tracing = "0.1"
deunicode = "1.6.2"
jpeg-encoder = "0.7.0"
futures = "0.3"
thiserror = "2.0.18"

burn = { version = "0.21.0-pre.3", default-features = false, features = ["std"], optional = true }
burn-store = { version = "0.21.0-pre.3", default-features = false, features = ["std", "burnpack"], optional = true }
async-once-cell = "0.5.4"

[features]
upscaling = ["dep:burn", "dep:burn-store", "burn-onnx", "burn-wgpu"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.13.2", features = ["json"] }
tokio = { version = "1.37", features = ["time", "rt", "macros"] }
gluesql_sled_storage = "0.19.0"
walkdir = "2.5.0"
chrono = "0.4.43"
tempfile = "3.27.0"
burn-wgpu = { version = "0.21.0-pre.3", default-features = false, features = ["vulkan"], optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-net = "0.7.0"
gloo-timers = { version = "0.4.0", features = ["futures"] }
getrandom = { version = "0.2", features = ["js"] }
getrandom_03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
uuid = { version = "1.0", features = ["js"] }
burn-wgpu = { version = "0.21.0-pre.3", default-features = false, features = ["webgpu"], optional = true }
js-sys = "0.3.95"
wasm-bindgen = "0.2.118"
wasm-bindgen-futures = "0.4.68"
web-sys = { version = "0.3.95", features = ["Navigator", "Gpu", "GpuAdapter", "GpuDevice", "Window", "GpuCanvasContext"] }

[build-dependencies]
burn-onnx = { version = "0.21.0-pre.3", optional = true }
