[package]
name = "proxynexus-gui"
version = "0.1.0"
authors = ["Alex McCulloch <alexmccx@gmail.com>"]
edition = "2024"

[dependencies]
dioxus = { version = "0.7" }
tracing = "0.1.44"
proxynexus-core = { path = "../proxynexus-core", features = ["upscaling"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.8", features = ["v4"] }
web-time = "1.1"
fuzzy-matcher = "0.3.7"
anyhow = "1.0.102"

[features]
default = ["desktop"]
desktop = ["dioxus/desktop"]
web = ["dioxus/web"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dirs = "6.0.0"
tokio = { version = "1.37.0", features = ["time", "fs"] }
rfd = "0.17.2"
reqwest = { version = "0.13.2", features = ["json"] }

[target.wasm32-unknown-unknown.dependencies]
gloo-net = "0.7.0"
gloo-timers = { version = "0.4.0", features = ["futures"] }
wasm-bindgen = "0.2.92"
js-sys = "0.3.69"
uuid = { version = "1.8", features = ["v4", "js"] }
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"

[target.wasm32-unknown-unknown.dependencies.web-sys]
version = "0.3.69"
features = [
  "Navigator",
  "Blob",
  "BlobPropertyBag",
  "Document",
  "HtmlElement",
  "Url",
  "Window",
  "Storage",
]
